readers/onlyfans-messages/src/style.scss
@import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities";

@import "./fonts.scss";

:root {
    --text-color: #242529;
    --bg-color: #fff;
    --dark-mode-text-color: #f6f7f8;
    --dark-mode-bg-color: #161618;
}

html,
body {
    font-family: "Roboto", sans-serif;
    min-height: 100%;
    height: 100%;
}
body {
    color: var(--text-color);
    background: var(--bg-color);

    &.dark-mode {
        color: var(--dark-mode-text-color);
        background: var(--dark-mode-bg-color);
    }
}

* {
    border-color: rgba(138, 150, 163, 0.2);
}

.thumbnails-carousel {
    display: flex;
    max-width: 100%;
    overflow-x: auto;

    & > a:not(:last-child) {
        margin-right: 0.25rem;
    }
}

::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(134, 134, 134, 0.4);
}

.blur-filter {
    top: -5px;
    left: -5px;
    right: -5px;
    bottom: -5px;
    filter: blur(5px) opacity(80%);
}

.color-mode-switch {
    position: fixed;
    top: 3em;
    right: 0;
    width: 2em;
    height: 2em;
    border-top-left-radius: 0.25em;
    border-bottom-left-radius: 0.25em;
    padding: 0.3em;
    cursor: pointer;
    border-right-width: 0px;
    background-color: var(--bg-color);
}
.color-mode-switch .color-mode {
    display: block;
    width: 100%;
    height: 100%;
    background-color: var(--dark-mode-bg-color);
}

.dark-mode {
    .color-mode-switch {
        background-color: var(--dark-mode-bg-color);
    }
    .color-mode-switch .color-mode {
        background-color: var(--bg-color);
    }
    .avatar {
        border-color: var(--dark-mode-bg-color);
    }
}

.inline-list > span:not(:first-child):before {
    content: " • ";
}

.bg-cyan-of {
    background-color: #00aff0;
}

.messages-group-container {
    .message {
        display: grid;
        grid-template-columns: auto 1fr;
        grid-template-areas: "avatar messages" ". date";

        .avatar-container {
            grid-area: avatar;
            .avatar {
                width: 2.25rem;
                height: 2.25rem;
            }
        }
        .fake-avatar-container {
            grid-area: avatar;
            width: 2.25rem;
            height: 2.25rem;
        }
        .message-container {
            grid-area: messages;
            .message-background {
                background-color: rgba(138, 150, 163, 0.12);
                border-radius: 0.375rem;
                border-bottom-left-radius: 0;
            }

        }
        &:not(:first-child) .message-container .message-background {
            border-top-left-radius: 0;
        }
        .date-container {
            grid-area: date;
        }
    }
    &.from-me {
        .message {
            grid-template-columns: 1fr auto;
            .message-container .message-background {
                background-color: rgba(0, 175, 240, 0.12);
                border-radius: 0.375rem;
                border-bottom-right-radius: 0;
    
            }
            .avatar-container {
                padding-left: 2rem;
                align-items: flex-end;
            }
            &:not(:first-child) .message-container .message-background {
                border-top-right-radius: 0;
            }
        }
    }
}

/**
 * Spinner from https://tobiasahlin.com/spinkit/
 */
.spinner {
    width: 40px;
    height: 40px;

    position: relative;
}

.double-bounce1,
.double-bounce2 {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: #18b8f0;
    opacity: 0.6;
    position: absolute;
    top: 0;
    left: 0;

    -webkit-animation: sk-bounce 2s infinite ease-in-out;
    animation: sk-bounce 2s infinite ease-in-out;
}

.double-bounce2 {
    -webkit-animation-delay: -1s;
    animation-delay: -1s;
}

@-webkit-keyframes sk-bounce {
    0%,
    100% {
        -webkit-transform: scale(0);
    }
    50% {
        -webkit-transform: scale(1);
    }
}

@keyframes sk-bounce {
    0%,
    100% {
        transform: scale(0);
        -webkit-transform: scale(0);
    }
    50% {
        transform: scale(1);
        -webkit-transform: scale(1);
    }
}

.avatar {
    background-image: url('./assets/onlyfans avatar.svg');
}

.background-image {
    background-image: url('./assets/onlyfans background.svg');
}

.dark-mode .background-image {
    background-image: url('./assets/onlyfans background-dark.svg');
}

@import './assets/emojis.scss';

